add jwt key to implement api authentication
