# docs/swagger.yaml
@@ -140,6 +140,16 @@ paths:
       consumes:
       - multipart/form-data
       parameters:
+      - description: user account
+        in: formData
+        name: userAccount
+        required: true
+        type: string
+      - description: user password
+        in: formData
+        name: userPassword
+        required: true
+        type: string
       - description: name
         in: formData
         name: name
@@ -200,6 +210,16 @@ paths:
         name: id
         required: true
         type: string
+      - description: user account
+        in: formData
+        name: userAccount
+        required: true
+        type: string
+      - description: user password
+        in: formData
+        name: userPassword
+        required: true
+        type: string
       - description: name
         in: formData
         name: name
@@ -229,6 +249,35 @@ paths:
       summary: Update User
       tags:
       - Admin
+  /api/v1/auth/login:
+    post:
+      consumes:
+      - multipart/form-data
+      parameters:
+      - description: user account
+        in: formData
+        name: userAccount
+        required: true
+        type: string
+      - description: user password
+        in: formData
+        name: userPassword
+        required: true
+        type: string
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/app.Response'
+        "500":
+          description: Internal Server Error
+          schema:
+            $ref: '#/definitions/app.Response'
+      summary: Get User
+      tags:
+      - Auth
   /api/v1/crawler/dcard/list-boards:
     get:
       produces:
@@ -242,6 +291,8 @@ paths:
           description: Internal Server Error
           schema:
             $ref: '#/definitions/app.Response'
+      security:
+      - Bearer: []
       summary: List Dcard Boards
       tags:
       - Crawler
@@ -269,6 +320,8 @@ paths:
           description: Internal Server Error
           schema:
             $ref: '#/definitions/app.Response'
+      security:
+      - Bearer: []
       summary: Download Article
       tags:
       - Crawler
@@ -296,6 +349,8 @@ paths:
           description: Internal Server Error
           schema:
             $ref: '#/definitions/app.Response'
+      security:
+      - Bearer: []
       summary: Download Article
       tags:
       - Crawler
